Translate task options, fix tooltip alignment

--- a/app/static/app/js/css/ProcessingNodeOption.scss
+++ b/app/static/app/js/css/ProcessingNodeOption.scss
@@ -20,4 +20,8 @@
         position: absolute;
         left: -99999px;
     }
+
+    .tooltip .tooltip-inner{
+        padding: 3px 16px;
+    }
 }
